yaml/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "tag1docs"
  labels:
    app.kubernetes.io/name: dokuwiki
    app.kubernetes.io/version: "2018-04-22b"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "dokuwiki"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "dokuwiki"
    spec:
      volumes:
      - name: dokuwiki-data
        persistentVolumeClaim:
          claimName: "dokuiwiki-data-pvc"
      imagePullSecrets:
        - name: tag1consulting-tag1docbot-pull-secret
      containers:
        - name: dokuwiki
          image: "quay.io/tag1consulting/dokuwiki:centos7"
          imagePullPolicy: Always
          volumeMounts:
          - name: dokuwiki-data
            mountPath: /mnt/data
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 800m
              memory: 768Mi
            requests:
              cpu: 300m
              memory: 512Mi
