yaml/service.yaml
---
# Source: dokuwiki/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "tag1docs-svc"
  labels:
    app.kubernetes.io/name: dokuwiki
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dokuwiki
